--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             <section>
                 <h2>Видео</h2>
                 <div class="video-container">
-                    <iframe src="https://my.mail.ru/+/video/embed/bk/va0kean/_myvideo/70" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://my.mail.ru/bk/va0kean/video/_myvideo/70.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
 
