--- a/index.html
+++ b/index.html
@@ -193,12 +193,30 @@
             height: 100%;
         }
 
+        /* Медиаплееры */
+        .media-player {
+            background: #f8f9fa;
+            padding: 25px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        .media-player h3 {
+            color: #667eea;
+            margin-bottom: 15px;
+            font-size: 1.2em;
+            padding-bottom: 10px;
+            border-bottom: 2px solid #e9ecef;
+        }
+
         /* Аудио */
         .audio-player {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
         }
 
         .audio-player h3 {
@@ -448,7 +466,7 @@
             <section>
                 <h2>Видео</h2>
                 <div class="video-container">
-                    <iframe src="https://my.mail.ru/video/embed/140939033990660166" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://my.mail.ru/+/video/embed/bk/va0kean/_myvideo/70" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
 
