--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <section>
                 <h2>Видео</h2>
                 <div class="video-container">
-                    <iframe src="https://my.mail.ru/video/embed/140939033990660166" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/file/d/1zMBgK1jLFcat3bcEbwkl0-FAW1A4EoHK/view?usp=sharing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
 
